[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "versioner"
version = "0.1.0"
description = "A CI/CD base package for Python projects"
authors = [
    { name = "Franco Tardones", email = "ftardones@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# [project.dependencies]
# Aquí puedes agregar dependencias necesarias para tu proyecto
# Por ejemplo:
# requests = "^2.28.1"

[project.scripts]
save = "versioner.commands.save:save"
deploy = "versioner.commands.deploy:deploy"
run = "versioner.commands.run:run"
setup = "versioner.commands.setup:setup"